<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".detention_alert.DetentionAlertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/content_scroll_view"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/detention_alert_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:background="@drawable/text_box_background"
                    android:inputType="textMultiLine"
                    android:gravity="start"
                    android:hint="@string/detention_alert_text_hint"
                    android:padding="@dimen/half_activity_default_margin"
                    android:minLines="5"
                    android:maxLength="132"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:singleLine="false" />

                <LinearLayout
                    android:id="@+id/select_contact_container"
                    android:layout_below="@id/detention_alert_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_default_margin"
                    android:paddingRight="@dimen/activity_default_margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/select_contact_bt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_contact"/>

                    <TextView
                        android:id="@+id/contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:text="@string/no_selected_contact"/>

                </LinearLayout>

                <TextView
                    android:layout_below="@id/select_contact_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:text="@string/detention_alert_explanation"/>

            </RelativeLayout>
        </ScrollView>

        <Button
            android:id="@+id/enable_alert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_button_background"
            android:text="@string/enable_alert"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
