<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.activities.login.LoginActivity">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@android:color/white"
        android:alpha="0.90"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_default_margin"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login_logo"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:textSize="48sp"
                android:maxLines="1"
                app:autoSizeTextType="uniform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_login_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="@dimen/activity_default_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_login_hint"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_default_margin">

                <Button
                    android:id="@+id/button_sign_up"
                    android:text="@string/btn_sign_up_text"
                    android:layout_marginRight="@dimen/half_activity_default_margin"
                    android:layout_marginEnd="@dimen/half_activity_default_margin"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:theme="@style/AppTheme.SignUpButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_login"
                    android:text="@string/btn_login_text"
                    android:layout_marginLeft="@dimen/half_activity_default_margin"
                    android:layout_marginEnd="@dimen/half_activity_default_margin"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:theme="@style/AppTheme.LoginButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
